minitrace-macro/tests/ui/err/has-properties-and-enter-on-poll.stderr
error: `enter_on_poll` can not be used with `properties`
 --> tests/ui/err/has-properties-and-enter-on-poll.rs:3:1
  |
3 | #[trace(enter_on_poll = true, properties = { "a": "b" })]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
