minitrace-macro/tests/ui/err/has-properties-and-enter-on-poll.rs
use minitrace::trace;

#[trace(enter_on_poll = true, properties = { "a": "b" })]
fn f() {}

fn main() {}
